# application/app/Models/EventLog.php
@@ -1,0 +1,10 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class EventLog extends Model
+{
+    protected $fillable = ['tipo_evento','pedido_id','descricao'];
+}
