# application/routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\File\FileController;
 use App\Http\Controllers\Pagamento\PagamentoController;
+use App\Http\Controllers\Pedido\PedidoController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -23,5 +24,6 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 Route::prefix('/v1/dewtech')->group(function () {
     Route::post('/pagar', [PagamentoController::class, 'pagar']);
     Route::post('/process-file', [FileController::class, 'processFile']);
+    Route::post('/pedido/concluir/{pedidoId}', [PedidoController::class, 'concluir']);
 });
 
